--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	height: 100vh;
 	box-shadow: 0 0 20px 2px #013A4E;
     border-radius:4%;
-	font-size: 0ch;
+	font-size: 100%;
 }
 
 @keyframes gradient {
@@ -102,7 +102,7 @@
 	
 	<div class="body-bg"></div>
 	<div class="container">
-		<div style="margin-left: 10%; text-align: justify;margin-top: 16%;margin-right: 10%;font-size: 1.5vw; margin-bottom: 16%;">
+		<div style="margin-left: 10%; text-align: justify;margin-top: 16%;margin-right: 10%;font-size: 1.25em; margin-bottom: 16%;">
 			<em>Happy birthday to you!</em><br>
 			<p>Mới đầu tính làm video dạng animation nhưng mấy tháng gần đây ngày nào mình cũng cần ra trường cấp 3 nên hơi khó thực hiện. Năm trước một vài người tham gia lồng tiếng họ đổi ý vào giờ chót nên phải viết lại kịch bản và vẽ lại từ đầu.</p>
 			<p>Lúc đó đang vẽ bình thường thì lại phải đổi phong cách vẽ sang stickman (người que) để cho kịp giờ. Một khi đã làm animation thì mình muốn vẽ cho nó tử tế chứ không muốn nó lại trở thành <strong>"Thảm họa phim hoạt hình"</strong> như năm trước. </p>
