--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
 		"Sinh nhật của bạn thế nào?",
 		"Do you want to play a chess with me?",
 		"Bạn vẫn đang ở đây chứ?"
+		"Đây là lần thứ mấy bạn quay lại website này?",
+		"You are crazy sometimes",
+		"Thật nhàm chán khi không có mục tiêu",
+		"👉👈",
 		
 
         ];
-
-		
-
-		document.getElementById("msg")
-		.innerHTML = '" ' + messages[0] + ' "'
+	
 
         setInterval(myTimer, 8000);
 		function myTimer() {
