--- a/index.html
+++ b/index.html
@@ -148,11 +148,12 @@
 		"Do you like this?",
 		"Sinh nhật của bạn thế nào?",
 		"Do you want to play a chess with me?",
-		"Bạn vẫn đang ở đây chứ?"
+		"Bạn vẫn đang ở đây chứ?",
 		"Đây là lần thứ mấy bạn quay lại website này?",
 		"You are crazy sometimes",
 		"Thật nhàm chán khi không có mục tiêu",
 		"👉👈",
+		"Tại sao mình lại làm cái website này?",
 		
 
         ];
