--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
 		
 
         ];
-	
+	var s = Math.floor(Math.random() * i);
+        document.getElementById("msg")
 
         setInterval(myTimer, 8000);
 		function myTimer() {
