--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	
 
         var messages = ["Happy birthday to Ánh🎉",
-		"Bạn có hiểu không mã morse?",
+		"Bạn có biết mã mkhôngkhông?",
         "Chúc mừng sinh nhật lần thứ 21",
         "Có một ngày sinh nhật là vui",
         "Lại là website chúc mừng nè",
@@ -154,6 +154,7 @@
 		"Thật nhàm chán khi không có mục tiêu",
 		"👉👈",
 		"Tại sao mình lại làm cái website này?",
+		"Có một lời nhắn ẩn dấu trong mã nguồn của website này!",
 		
 
         ];
