--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<!--BẠN LÀ AI? VÀO ĐÂY ĐỂ LÀM GÌ?-->
+<!--Xin hỏi thí chủ là ai? Vào đây với mục đích gì?-->
 <head>
 	<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <title>Đây chỉ là một cái link bình thường.</title>
 
     <style>
-        .body-bg {
+    .body-bg {
 	width: 100%;
 	height: 100%;
 	position: fixed;
@@ -21,6 +21,8 @@
 
 
 .container {
+	padding-top: 3%;
+	padding-bottom: 3%;
 	color: black;
 	width: 80%;
 	height: 80%;
@@ -37,6 +39,8 @@
 	box-shadow: 0 0 20px 2px #013A4E;
     border-radius:4%;
 	font-size: 100%;
+	margin-bottom: 15%;
+	
 }
 
 @keyframes gradient {
@@ -62,6 +66,7 @@
 	color: #fff;
 	font-family: Arial;
 	font-size: 0.8em;
+	margin-bottom: 15%;
 }
 
 
@@ -88,7 +93,7 @@
 <body>
 	
 <div class="body-bg">
-	<div class="container">
+	<div style="margin-top: 0px;" class="container">
 		<div class="container-data"><div style="font-size: 2.2em;" id="msg"></div></div>
 			<div style="margin-left: 10%; text-align: justify;margin-top: 3%;margin-right: 10%;font-size: 1.25em; margin-bottom: 15%;">
 			
@@ -101,7 +106,7 @@
 				<em>Vậy thôi! Hi vọng từ sáng tới giờ không trách mình quên sinh nhật.</em>
 			
 			</div>
-			<br>
+			
 		</div>
 	</div></div>
 </div>
@@ -114,7 +119,7 @@
 	
 
         var messages = ["Happy birthday to Ánh🎉",
-		"Bạn có biết mã morse ?",
+		"Bạn có hiểu không mã morse?",
         "Chúc mừng sinh nhật lần thứ 21",
         "Có một ngày sinh nhật là vui",
         "Lại là website chúc mừng nè",
