--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <div class="body-bg">
 	<div style="margin-top: 0px;" class="container">
 		<div class="container-data"><div style="font-size: 2.2em;" id="msg"></div></div>
-			<div style="margin-left: 10%; text-align: justify;margin-top: 3%;margin-right: 10%;font-size: 1.25em; margin-bottom: 15%;">
+			<div style="margin-left: 10%; text-align: justify;margin-top: 3%;margin-right: 10%;font-size: 1.25em; margin-bottom: 15%; position: absolute; ">
 			
 				<em>Happy birthday to you!</em><br>
 				<p>Mới đầu tính làm video dạng animation nhưng mấy tháng gần đây ngày nào mình cũng cần ra trường cấp 3 nên hơi khó thực hiện. Năm trước một vài người tham gia lồng tiếng họ đổi ý vào giờ chót nên phải viết lại kịch bản và vẽ lại từ đầu.</p>
